2005-08-15  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Fix test for NL_LOCALE_NAME macro.

2005-07-28  Stepan Kasal  <kasal@ucw.cz>

	* gettext.m4 (AM_GNU_GETTEXT): Don't use changequote, add pairs of
	brackets instead.

2005-07-28  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_PO_SUBDIRS, AM_POSTPROCESS_PO_MAKEFILE): Update comments
	regarding automake.
	Suggested by Stepan Kasal <kasal@ucw.cz>.

2005-07-24  Bruno Haible  <bruno@clisp.org>

	Tidy up exported symbols.
	* gettext.m4 (AM_INTL_SUBDIR): Require gl_VISIBILITY.
	* visibility.m4: New file.
	* Makefile.am (EXTRA_DIST): Add it.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): On OSF/1 with cc, use -D_REENTRANT, not -pthread.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): Add some ordering constraints.

2005-07-25  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): On Solaris and HP-UX, define
	PTHREAD_IN_USE_DETECTION_HARD.
	* gettext.m4 (AM_INTL_SUBDIR): Also hide the glthread_in_use function.

2005-07-22  Bruno Haible  <bruno@clisp.org>

	* lock.m4 (gl_LOCK): Stronger test for pthread functions in libc, so
	that the result on IRIX 6.5 is no.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_INTL_SUBDIR): Also hide the glthread_once* functions.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* lock.m4: New file.
	* gettext.m4 (AM_INTL_SUBDIR): Remove multithreading checks. Instead
	require gl_LOCK and define __libc_lock_*, __libc_rwlock_*,
	__libc_lock_*recursive*, glthread_* as macros.
	* Makefile.am (EXTRA_DIST): Add lock.m4.

2005-05-05  Bruno Haible  <bruno@clisp.org>

	* gettext.m4 (AM_GNU_GETTEXT): Add LIBTHREAD to LIBINTL and
	LTLIBTHREAD to LTLIBINTL.
	(AM_INTL_SUBDIR): Check for thread library. Set LIBTHREAD, LTLIBTHREAD.

2005-03-13  Bruno Haible  <bruno@clisp.org>

	* po.m4 (AM_PO_SUBDIRS): Use AC_CONFIG_COMMANDS instead of
	AC_OUTPUT_COMMANDS.
	Suggested by Alexandre Duret-Lutz <adl@src.lip6.fr>.
