@@ -1,3 +1,9 @@
+2005-08-28  Bruno Haible  <bruno@clisp.org>
+
+	* gettext.m4 (gt_INTL_SUBDIR_CORE): New macro, extracted from
+	AM_INTL_SUBDIR.
+	(AM_INTL_SUBDIR): Require it.
+
 2005-08-15  Bruno Haible  <bruno@clisp.org>
 
 	* gettext.m4 (AM_INTL_SUBDIR): Fix test for NL_LOCALE_NAME macro.
